--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@emailjs/browser": "^3.11.0",
+    "@react-spring/three": "^9.7.3",
+    "@react-three/drei": "^9.88.2",
+    "@react-three/fiber": "^8.14.5",
+    "react-router-dom": "^6.17.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.157.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
