--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@emailjs/browser": "^3.11.0",
     "@react-spring/three": "^9.7.3",
+    "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.88.2",
     "@react-three/fiber": "^8.14.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.17.0",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.157.0"
@@ -29,12 +30,15 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.9"
   }
 }
